set(TRENCH_SOURCES
	Benchmarking.cpp
	Benchmarking.h
	Census.cpp
	Census.h
	Expression.cpp
	Expression.h
	ExpressionsCache.cpp
	ExpressionsCache.h
	FenceInsertion.cpp
	FenceInsertion.h
	Instruction.h
	Kinds.h
	NaiveParser.cpp
	NaiveParser.h
	Program.cpp
	Program.h
	Reduction.cpp
	Reduction.h
	RobustnessChecking.cpp
	RobustnessChecking.h
	SCSemantics.cpp
	SCSemantics.h
	SpinModelChecker.cpp
	SpinModelChecker.h
	State.h
	Thread.cpp
	Thread.h
	Transition.cpp
	Transition.h
	config.h
	printAsDot.cpp
	printAsDot.h
	printAsPromela.cpp
	printAsPromela.h
)

add_library(trench ${TRENCH_SOURCES})
