set(TRENCH_SOURCES
	AutomatonPrinting.h
	Benchmarking.cpp
	Benchmarking.h
	Census.cpp
	Census.h
	Dfs.h
	Expression.cpp
	Expression.h
	ExpressionsCache.cpp
	ExpressionsCache.h
	FenceInsertion.cpp
	FenceInsertion.h
	Instruction.h
	Kinds.h
	NaiveParser.cpp
	NaiveParser.h
	Program.cpp
	Program.h
	ProgramPrinting.cpp
	ProgramPrinting.h
	Reachability.h
	Reduction.cpp
	Reduction.h
	RobustnessChecking.cpp
	RobustnessChecking.h
	SCReachability.cpp
	SCReachability.h
	SCSemantics.cpp
	SCSemantics.h
	SmallMap.h
	State.h
	Thread.cpp
	Thread.h
	Transition.cpp
	Transition.h
	config.h
)

add_library(trench ${TRENCH_SOURCES})
